# act-test

./: .coverage  .env  .gitignore  Dockerfile  README.md  fabfile.py  foo.py  justfile  pyproject.toml
.github/actions/build-docker/: action.yml
.github/actions/build-docker-image/: action.yml
.github/actions/build-node/: action.yml
.github/actions/build-yarn-bundle/: action.yml
.github/actions/commit-changes/: action.yml
.github/actions/fabric/: action.yml
.github/actions/lint-python/: action.yml
.github/actions/linters/ruff/: action.yml
.github/actions/mega-lint/: action.yml  black.sh  black_json_output.py  common.sh  parse_to_json_output.py  prettier.sh  ruff.sh
.github/actions/prepare-commit-output/: action.yml
.github/actions/ruff/: action.yml
.github/actions/test-runner/: action.yml  node.sh  python.sh
.github/workflows/: build-docker-image.yml  build-docker-images.yml  build-front-end.yml  build.yaml  build.yml  check.yml  ci.yml  format.yml  lint-and-format.yml  lint-or-format.yml  lint-python.yml  lint.yml  publish.yaml  publish.yml  reusable.yml  test.yml
act_test/tests/: test_hello_world.py
foo/: foo.py
front-end/: package.json  vite.config.ts  vitest.config.ts
